RQST: add close button

--- a/site/templates/twig/items/mxrfe/new-xref-modal.twig
+++ b/site/templates/twig/items/mxrfe/new-xref-modal.twig
@@ -39,9 +39,14 @@
 						%}
 					</div>
 					<input type="hidden" name="mnfritemID" value="new">
-					<button type="submit" class="btn btn-success">
-						Insert
-					</button>
+					<div class="d-flex justify-content-between">
+						<button type="submit" class="btn btn-success">
+							Insert
+						</button>
+						<button type="button" class="btn btn-warning" data-dismiss="modal">
+							<i class="fa fa-times" aria-hidden="true"></i> Close
+						</button>
+					</div>
 				</form>
 			</div>
 		</div>
