--- a/site/templates/twig/api/lookup/mgl/mhm/search.twig
+++ b/site/templates/twig/api/lookup/mgl/mhm/search.twig
@@ -2,5 +2,6 @@
 	{% include 'api/lookup/codes/search/form.twig' %}
 </div>
 <div>
-	{% include 'api/lookup/msds-codes/list.twig' %}
+	{% include 'api/lookup/mgl/mhm/list.twig' %}
 </div>
+
