--- a/site/templates/twig/api/lookup/mgl/mhm/list.twig
+++ b/site/templates/twig/api/lookup/mgl/mhm/list.twig
@@ -1,18 +1,18 @@
 <table class="table table-striped" id="code-table">
 	<thead>
 		<tr class="bg-dark text-white">
-			<th>Code</th>
+			<th>Account</th>
 			<th>Description</th>
 		</tr>
 	</thead>
 	{% for code in results %}
 		<tr>
 			<td>
-				<a href="#" class="link code-link" data-code="{{ code.code }}">
-					{{ code.code }}
+				<a href="#" class="link code-link text-monospace" data-code="{{ code.code }}">
+					{{ code.code|replace({' ': '&nbsp;'})|raw }}
 				</a>
 			</td>
-			<td>{{ code-description }}</td>
+			<td>{{ code.description }}</td>
 		</tr>
 	{% endfor %}
 </table>
