--- a/site/templates/twig/api/lookup/mth/labels/search/form.twig
+++ b/site/templates/twig/api/lookup/mth/labels/search/form.twig
@@ -1,10 +1,21 @@
-<form action="{{ input.paginateUrl(1) }}" method="GET" class="allow-enterkey-submit" id="printer-search-form">
-	<div class="input-group form-group">
-		<input class="form-control form-group inline" type="text" name="q" placeholder="Search Format, Description">
-		<span class="input-group-btn">
-			<button type="submit" class="btn btn-light">
-				<i class="fa fa-search"></i> <span class="sr-only">Search</span>
-			</button>
-		</span>
+<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit" id="printer-search-form">
+	<div class="row">
+		<div class="col-sm-4">
+			{% if input.get.offsetExists('q') %}
+				<a href="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" class="btn btn-warning clear-search">
+					<i class="fa fa-times" aria-hidden="true"></i> Clear Search
+				</a>
+			{% endif %}
+		</div>
+		<div class="col-sm-8">
+			<div class="input-group form-group">
+				<input class="form-control" type="text" name="q" value="{{ input.get.text('q') }}" placeholder="Search Format, Description">
+				<span class="input-group-btn">
+					<button type="submit" class="btn btn-light">
+						<i class="fa fa-search"></i> <span class="sr-only">Search</span>
+					</button>
+				</span>
+			</div>
+		</div>
 	</div>
 </form>
