--- a/site/templates/twig/api/lookup/warehouse/bins/search/form.twig
+++ b/site/templates/twig/api/lookup/warehouse/bins/search/form.twig
@@ -1,8 +1,21 @@
-<form action="{{ page.searchURL }}" method="get" class="allow-enterkey-submit" id="warehouse-search-form">
-	<div class="input-group form-group">
-		<input class="form-control form-group inline" type="text" name="q" value="" placeholder="Search Bin ID, Name">
-		<span class="input-group-btn">
-			<button type="submit" class="btn btn-default"> <i class="fa fa-search"></i> <span class="sr-only">Search</span> </button>
-		</span>
+<form action="{{ input.paginateUrl(1, {'includeQueryString': false})}}" method="get" class="allow-enterkey-submit" id="warehouse-search-form">
+	<input type="hidden" name="whseID" value="{{ input.get.text('whseID') }}">
+
+	<div class="row">
+		<div class="col-sm-4">
+			{% if input.get.offsetExists('q') %}
+				<a href="{{ input.paginateUrl(1, {'removeFromQueryString': ['q']}) }}" class="btn btn-warning clear-search">
+					<i class="fa fa-times" aria-hidden="true"></i> Clear Search
+				</a>
+			{% endif %}
+		</div>
+		<div class="col-sm-8">
+			<div class="input-group form-group">
+				<input class="form-control" type="text" name="q" value="{{ input.get.text('q') }}" placeholder="Search Bin ID, Name">
+				<span class="input-group-btn">
+					<button type="submit" class="btn btn-light"> <i class="fa fa-search"></i> <span class="sr-only">Search</span> </button>
+				</span>
+			</div>
+		</div>
 	</div>
 </form>
