--- a/site/templates/twig/api/lookup/mgl/mhm/search.twig
+++ b/site/templates/twig/api/lookup/mgl/mhm/search.twig
@@ -1,5 +1,5 @@
 <div>
-	{% include 'api/lookup/codes/search/form.twig' %}
+	{% include 'api/lookup/mgl/mhm/form.twig' %}
 </div>
 <div>
 	{% include 'api/lookup/mgl/mhm/list.twig' %}
