--- a/site/templates/twig/api/lookup/mgl/mhm/form.twig
+++ b/site/templates/twig/api/lookup/mgl/mhm/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit" id="printer-search-form">
+<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit" id="codes-search-form">
 	<div class="form-row">
 		<div class="col-sm-4 text-right">
 			{% if input.get.offsetExists('q') %}
@@ -9,7 +9,7 @@
 		</div>
 		<div class="col-sm-8">
 			<div class="input-group form-group">
-				<input class="form-control" type="text" name="q" value="{{ input.get.text('q') }}" placeholder="Search Format, Description">
+				<input class="form-control form-group" type="text" name="q" value="{{ input.get.text('q') }}" placeholder="Search Account, Description">
 				<span class="input-group-btn">
 					<button type="submit" class="btn btn-light">
 						<i class="fa fa-search"></i> <span class="sr-only">Search</span>
