--- a/site/templates/twig/api/lookup/warehouse/bins/search/form.twig
+++ b/site/templates/twig/api/lookup/warehouse/bins/search/form.twig
@@ -1,8 +1,8 @@
 <form action="{{ input.paginateUrl(1, {'includeQueryString': false})}}" method="get" class="allow-enterkey-submit" id="warehouse-search-form">
 	<input type="hidden" name="whseID" value="{{ input.get.text('whseID') }}">
 
-	<div class="row">
-		<div class="col-sm-4">
+	<div class="form-row">
+		<div class="col-sm-4 text-right">
 			{% if input.get.offsetExists('q') %}
 				<a href="{{ input.paginateUrl(1, {'removeFromQueryString': ['q']}) }}" class="btn btn-warning clear-search">
 					<i class="fa fa-times" aria-hidden="true"></i> Clear Search
