add close button

--- a/site/templates/twig/util/ajax-modal.twig
+++ b/site/templates/twig/util/ajax-modal.twig
@@ -1,7 +1,7 @@
 <div class="modal fade" id="ajax-modal" tabindex="-1" role="dialog" aria-labelledby="ajax-modal-label" aria-hidden="true" data-input="">
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
-			<div class="modal-header">
+			<div class="modal-header bg-light">
 				<h4 class="modal-title" id="ajax-modal-label">Title</h4>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
@@ -9,6 +9,15 @@
 			</div>
 			<div class="modal-body">
 
+			</div>
+			<div class="modal-footer py-1">
+				<div class="d-flex justify-content-between">
+					<div></div>
+					<div></div>
+					<button type="button" class="btn btn-warning" data-dismiss="modal">
+						<i class="fa fa-times" aria-hidden="true"></i> Close
+					</button>
+				</div>
 			</div>
 		</div>
 	</div>
