--- a/site/templates/twig/code-tables/mar/spm/js/classes/Form.js.twig
+++ b/site/templates/twig/code-tables/mar/spm/js/classes/Form.js.twig
@@ -42,6 +42,7 @@ class CodeForm {
 			this.inputs.vendorid.val(json.vendortid);
 			this.inputs.restricted.val(json.restricted);
 			this.inputs.email.val(json.email);
+			this.inputs.vendorid.val(json.vendorid);
 			this.triggerInputsChange();
 			
 			var validator = this.inputs.form.validate();
