--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+
 /**************************************
 	General Styles
 **************************************/
@@ -277,7 +279,11 @@ a.image-link:hover {
 }
 
 .font-monospace {
-	font-family: monospace;
+	font-family: 'Inconsolata', monospace;
+}
+
+.text-monospace {
+	font-family: 'Inconsolata', monospace;
 }
 
 .text-underlined {
@@ -393,6 +399,10 @@ div.qnotes {
 
 form label {
 	font-weight: bold;
+}
+
+form#code-form input[maxlength] {
+	font-family: 'Inconsolata', monospace;
 }
 
 /*==============================================================
