--- a/site/templates/twig/code-tables/mar/csv/form.twig
+++ b/site/templates/twig/code-tables/mar/csv/form.twig
@@ -10,40 +10,49 @@
 	<input type="hidden" name="action" value="update">
 
 	<div class="row">
-		<div class="col-sm-2">
-			<div class="form-group">
-				<label for="code">Code</label>
+		<div class="col-sm-3 mb-2">
+			<label for="code">Code</label>
+		</div>
+		<div class="col-sm-8 mb-2">
+			<div class="col-sm-2 px-0">
 				{% include 'util/bootstrap/form/input.twig' with {
 						'input': {
 							'name': 'code',
 							'size': 'sm',
+							'addclasses': ['text-monospace'],
 							'attributes': {
 								'maxlength': manager.fieldAttribute('code', 'maxlength')
 							}
-						},
-					}
-				%}
-			</div>
-		</div>
-		<div class="col-sm-6">
-			<div class="form-group">
-				<label for="description">Description</label>
-				{% include 'util/bootstrap/form/input.twig' with {
-						'input': {
-							'name': 'description',
-							'size': 'sm',
-							'attributes': {
-								'maxlength': manager.fieldAttribute('description', 'maxlength')
-							}
-						},
+						}
 					}
 				%}
 			</div>
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-sm-3 mb-2">
+			<label for="description">Description</label>
+		</div>
+		<div class="col-sm-4 mb-2">
+			{% include 'util/bootstrap/form/input.twig' with {
+					'input': {
+						'name': 'description',
+						'size': 'sm',
+						'attributes': {
+							'maxlength': manager.fieldAttribute('description', 'maxlength')
+						}
+					}
+				}
+			%}
+		</div>
+	</div>
+
 	{% include 'code-tables/mar/csv/form/ups-fields.twig' %}
 	{% include 'code-tables/mar/csv/form/priority-shipping.twig' %}
+	{% include 'code-tables/mar/csv/form/scac-edi-chargefreight.twig' %}
+	{% include 'code-tables/mar/csv/form/surcharge-percent.twig' %}
+	{% include 'code-tables/mar/csv/form/artaxcode.twig' %}
 
 	<div class="d-flex justify-content-between align-items-center">
 		<button type="submit" class="btn btn-success form_button">
