--- a/site/templates/twig/code-tables/mar/csv/form/ups-fields.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/ups-fields.twig
@@ -1,56 +1,55 @@
-<legend>UPS</legend>
 <div class="row">
-	<div class="col-sm-5">
-		<div class="form-group">
-			<label for="service">Service</label>
-			{% include 'util/bootstrap/form/input.twig' with {
-					'input': {
-						'name': 'service',
-						'size': 'sm',
-						'attributes': {
-							'maxlength': manager.fieldAttribute('service', 'maxlength')
-						}
-					},
-				}
-			%}
-		</div>
+	<div class="col-sm-3 mb-2">
+		<label for="service">UPS Service</label>
 	</div>
-	<div class="col-sm-3">
-		<div class="form-group">
-			<label for="billing">Billing</label>
-			{% include 'util/bootstrap/form/select-simple.twig' with {
-					'select': {
-						'name': 'billing',
-						'size': 'sm',
-						'value' : manager.fieldAttribute('billing', 'default'),
-						'haskeys': true,
-						'showvalue': true,
-						'options': manager.fieldAttribute('billing', 'options')
-
+	<div class="col-sm-4 mb-2">
+		{% include 'util/bootstrap/form/input.twig' with {
+				'input': {
+					'name': 'service',
+					'size': 'sm',
+					'attributes': {
+						'maxlength': manager.fieldAttribute('service', 'maxlength')
 					}
 				}
-			%}
-		</div>
-	</div>
-	<div class="col-sm-3">
-		<div class="form-group">
-			<label for="residential">Residential</label>
-			{% include 'util/bootstrap/form/select-simple.twig' with {
-					'select': {
-						'name': 'residential',
-						'size': 'sm',
-						'value' : manager.fieldAttribute('residential', 'default'),
-						'haskeys': true,
-						'showvalue': true,
-						'options': manager.fieldAttribute('residential', 'options')
-
-					}
-				}
-			%}
-		</div>
+			}
+		%}
 	</div>
 </div>
 
+<div class="row">
+	<div class="col-sm-3 mb-2">
+		<label for="billing">UPS Billing</label>
+	</div>
+	<div class="col-sm-4 mb-2">
+		{% include 'util/bootstrap/form/select-simple.twig' with {
+				'select': {
+					'name': 'billing',
+					'size': 'sm',
+					'value' : manager.fieldAttribute('billing', 'default'),
+					'haskeys': true,
+					'showvalue': true,
+					'options': manager.fieldAttribute('billing', 'options')
+				}
+			}
+		%}
+	</div>
+</div>
 
-
-
+<div class="row">
+	<div class="col-sm-3 mb-2">
+		<label for="residential">UPS Residential</label>
+	</div>
+	<div class="col-sm-4 mb-2">
+		{% include 'util/bootstrap/form/select-simple.twig' with {
+				'select': {
+					'name': 'residential',
+					'size': 'sm',
+					'value' : manager.fieldAttribute('residential', 'default'),
+					'haskeys': true,
+					'showvalue': true,
+					'options': manager.fieldAttribute('residential', 'options')
+				}
+			}
+		%}
+	</div>
+</div>
