--- a/site/templates/twig/code-tables/mar/csv/form/artaxcode.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/artaxcode.twig
@@ -30,7 +30,7 @@
 					}
 				}
 			%}
-			<span class="text-muted artaxcode-description"></span>
+			<small class="text-muted artaxcode-description"></small>
 		</div>
 	</div>
 </div>
