--- a/site/templates/twig/code-tables/mar/csv/form/scac-edi-chargefreight.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/scac-edi-chargefreight.twig
@@ -26,7 +26,7 @@
 		<div class="col-sm-2 px-0">
 			{% include 'util/bootstrap/form/input.twig' with {
 					'input': {
-						'name': 'sedimethod',
+						'name': 'edimethod',
 						'size': 'sm',
 						'attributes': {
 							'maxlength': manager.fieldAttribute('edimethod', 'maxlength')
