--- a/site/templates/twig/code-tables/mar/csv/form/surcharge-percent.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/surcharge-percent.twig
@@ -23,19 +23,22 @@
 	<div class="col-sm-3 mb-2">
 		&nbsp; &nbsp; &nbsp; <label for="surchargepercent">Surcharge Percent</label>
 	</div>
-	<div class="col-sm-2 mb-2">
-		{% include 'util/bootstrap/form/input.twig' with {
-				'input': {
-					'name': 'surchargepercent',
-					'size': 'sm',
-					'type': 'number',
-					'attributes': {
-						'max': manager.fieldAttribute('surchargepercent', 'max'),
-						'default': manager.fieldAttribute('surchargepercent', 'default'),
-						'readonly': true,
+	<div class="col-sm-9 mb-2">
+		<div class="col-sm-2 px-0 input-parent">
+			{% include 'util/bootstrap/form/input.twig' with {
+					'input': {
+						'name': 'surchargepercent',
+						'size': 'sm',
+						'type': 'number',
+						'addclasses': ['text-right'],
+						'attributes': {
+							'max': manager.fieldAttribute('surchargepercent', 'max'),
+							'default': manager.fieldAttribute('surchargepercent', 'default'),
+							'readonly': true,
+						}
 					}
 				}
-			}
-		%}
+			%}
+		</div>
 	</div>
 </div>
