--- a/site/templates/twig/sales-orders/sales-order/page.twig
+++ b/site/templates/twig/sales-orders/sales-order/page.twig
@@ -1,8 +1,8 @@
 {{ html.header|raw }}
 
-<div class="row mt-3">
+<div class="row">
 	<div class="col-sm-6">
-		<h3 class="font-weight-bold text-danger">Order Items</h3>
+		<h3 class="font-weight-bold text-secondary">Order Items</h3>
 	</div>
 </div>
 
