FIX: force uppercase on scac, edi inputs

--- a/site/templates/twig/code-tables/mar/csv/form/scac-edi-chargefreight.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/scac-edi-chargefreight.twig
@@ -9,7 +9,8 @@
 						'name': 'scac',
 						'size': 'sm',
 						'attributes': {
-							'maxlength': manager.fieldAttribute('scac', 'maxlength')
+							'maxlength': manager.fieldAttribute('scac', 'maxlength'),
+							'oninput': 'this.value = this.value.toUpperCase()',
 						}
 					},
 				}
@@ -29,7 +30,8 @@
 						'name': 'edimethod',
 						'size': 'sm',
 						'attributes': {
-							'maxlength': manager.fieldAttribute('edimethod', 'maxlength')
+							'maxlength': manager.fieldAttribute('edimethod', 'maxlength'),
+							'oninput': 'this.value = this.value.toUpperCase()',
 						}
 					}
 				}
