--- a/site/templates/twig/code-tables/mar/csv/js/classes/Inputs.js.twig
+++ b/site/templates/twig/code-tables/mar/csv/js/classes/Inputs.js.twig
@@ -13,10 +13,10 @@ class CodeInputs {
 		this.form  = $('#' + this.id),
 		this.code              = this.form.find('input[name=code]');
 		this.description       = this.form.find('input[name=description]');
-		this.service           = this.form.find('input[name=service]');
+		this.service           = this.form.find('select[name=service]');
 		this.billing           = this.form.find('select[name=billing]');
 		this.residential       = this.form.find('select[name=residential]');
-		this.priority          = this.form.find('input[name=priorirty]');
+		this.priority          = this.form.find('input[name=priority]');
 		this.shippingarea      = this.form.find('input[name=shippingarea]');
 		this.airshipment       = this.form.find('select[name=airshipment]');
 		this.commercialflight  = this.form.find('select[name=commercialflight]');
@@ -26,6 +26,6 @@ class CodeInputs {
 		this.useroute          = this.form.find('select[name=useroute]');
 		this.addsurcharge      = this.form.find('select[name=addsurcharge]');
 		this.surchargepercent  = this.form.find('input[name=surchargepercent]');
-		this.artaxcode         = this.form.find('input[name=artaxcode]');
+		// this.artaxcode         = this.form.find('input[name=artaxcode]');
 	}
 }
