--- a/site/templates/twig/items/cxm/.new/customers/.js.twig
+++ b/site/templates/twig/items/cxm/.new/customers/.js.twig
@@ -95,6 +95,17 @@ $(function() {
 		modal.find('.modal-body').load(button.attr('href'));
 	});
 
+	$("body").on('click', '#ajax-modal a.clear-search', function(e) {
+		e.preventDefault();
+		var button = $(this);
+		var modal  = button.closest('.modal');
+		modal.find('.modal-body').loadin(button.attr('href'), function(ajaxResponse) {
+			if (ajaxResponse.headers.hasOwnProperty('page-headline')) {
+				modal.find('.modal-title').text('Search ' + ajaxResponse.headers['page-headline']);
+			}
+		});
+	});
+
 /* =============================================================
 	New CXM Modal Functions
 ============================================================= */
