--- a/site/templates/twig/items/vxm/xref/form.twig
+++ b/site/templates/twig/items/vxm/xref/form.twig
@@ -10,7 +10,7 @@
 	<input type="hidden" name="action" value="update-vxm">
 	<input type="hidden" name="original_vendoritemID" value="{{ item.vendoritemID }}">
 
-	<div class="row mb-3">
+	<div class="row">
 		{% include 'items/vxm/xref/form/header.twig' %}
 	</div>
 	<div class="form-row">
