--- a/site/templates/twig/items/upcx/.new/list/display.twig
+++ b/site/templates/twig/items/upcx/.new/list/display.twig
@@ -1,3 +1,5 @@
 {% include 'items/upcx/.new/list/toolbar.twig' %}
-{% include 'items/upcx/.new/list/list.twig' %}
+<div class="mb-3">
+	{% include 'items/upcx/.new/list/list.twig' %}
+</div>
 {% include 'util/paginator/propel.twig' with {'pager': xrefs} %}
