--- a/site/templates/twig/items/upcx/.new/xref/form/primary.twig
+++ b/site/templates/twig/items/upcx/.new/xref/form/primary.twig
@@ -28,7 +28,6 @@
 				{% endif %}
 			</div>
 		</div>
-		
-		<input type="hidden" name="valid_primary" id="valid_primary" value="false">
+		<input type="checkbox" name="updatePrimary" class="collapse"  id="updateprimary" value="Y">
 	</div>
 </div>
