--- a/site/templates/twig/items/upcx/form/form.twig
+++ b/site/templates/twig/items/upcx/form/form.twig
@@ -26,7 +26,7 @@
 					View Primary ({{ primary.upc }}-{{ primary.itemid }})
 				</a>
 			{% endif %}
-			<input type="hidden" name="valid_primary" id="valid_primary" value="false">
+			<input type="checkbox" name="updatePrimary" class="collapse"  id="updateprimary" value="Y">
 		</div>
 	</div>
 	<div class="form-group row">
