--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -290,6 +290,10 @@ a.image-link:hover {
 	text-decoration: underline;
 }
 
+.text-bold {
+	font-weight: bold;;
+}
+
 /*==============================================================
 	FORM Styles
 ==============================================================*/
