--- a/site/templates/twig/customers/ci/.new/customer/header/ar-activity.twig
+++ b/site/templates/twig/customers/ci/.new/customer/header/ar-activity.twig
@@ -1,9 +1,22 @@
+{#
+	var / var property      Description / Instance of
+	-------------------------------------------------
+	user                    ProcessWire\User
+	input                   ProcessWire\WireInput
+	page                    ProcessWire\Page
+	page.custid             Customer ID
+	customer                Customer
+	customer.contacts       Propel\Runtime\Util\PropelModelPager of Custinde
+	customer.salesOrders    Propel\Runtime\Util\PropelModelPager of SalesOrder
+	customer.salesHistory   Propel\Runtime\Util\PropelModelPager of Sales History
+	customer.quotes         Propel\Runtime\Util\PropelModelPager of Quote
+#}
 <div class="card">
 	<div class="card-header">
 		<span class="h5">Customer Activity</span>
 	</div>
 	<ul class="list-group list-group-flush">
-		<li class="list-group-item bg-success text-white">
+		<li class="list-group-item py-1 px-1 bg-success text-white">
 			<div class="row">
 				<div class="col-sm-6">
 					Last Sale Date
@@ -13,17 +26,17 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Sales Orders
 				</div>
 				<div class="col-sm-6 text-right">
-					{{ customer.get_orders_count() }}
+					{{ customer.countSalesOrders() }}
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Amount
@@ -33,7 +46,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Highest Balance
@@ -43,7 +56,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1">
 			<div class="row">
 				<div class="col-sm-6">
 					Current Finance Charge
@@ -53,8 +66,8 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item bg-light text-center"><span class="h5 font-weight-bold">Invoices</span></li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1 bg-light text-center"><span class="h5 font-weight-bold">Invoices</span></li>
+		<li class="list-group-item py-1 px-1">
 			<div class="row font-weight-bold">
 				<div class="col-sm-6">
 					Period
@@ -67,7 +80,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1">
 			<div class="row">
 				<div class="col-sm-6">
 					<abbr title="{{ "now"|date("F Y") }}">Month-to-date</abbr>
@@ -80,7 +93,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1">
 			<div class="row">
 				<div class="col-sm-6">
 					<abbr title="{{ "now"|date("Y") }}">Year-to-date</abbr>
@@ -93,7 +106,7 @@
 				</div>
 			</div>
 		</li>
-		<li class="list-group-item">
+		<li class="list-group-item py-1 px-1">
 			<div class="row">
 				<div class="col-sm-5">
 					Last 12 Months
