--- a/site/templates/twig/customers/ci/.new/pricing/display.twig
+++ b/site/templates/twig/customers/ci/.new/pricing/display.twig
@@ -1,17 +1,17 @@
-{% extends 'customers/ci/display.twig' %}
+{% extends 'customers/ci/.new/display.twig' %}
 
 {% block body %}
 	{% include 'customers/ci/pricing/customer-item.twig' %}
 
 	<div class="card-body">
 		<div class="row">
-			<div class="col-sm-4 form-group">
+			<div class="col-sm-3 form-group">
 				{% include 'items/ii/pricing/standard-pricing.twig' %}
 			</div>
-			<div class="col-sm-4 form-group">
+			<div class="col-sm-3 form-group">
 				{% include 'items/ii/pricing/customer-pricing.twig' %}
 			</div>
-			<div class="col-sm-4 form-group">
+			<div class="col-sm-6 form-group">
 				{% include 'items/ii/pricing/derived-pricing.twig' %}
 			</div>
 		</div>
@@ -23,7 +23,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div></div>
-			<a href="{{ page.ciUrl(customer.id) }}" class="btn btn-warning btn-sm">
+			<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-warning btn-sm">
 				<i class="fa fa-times" aria-hidden="true"></i> Close
 			</a>
 		</div>
